--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "formidable": "^3.5.1",
     "framer-motion": "^10.16.4",
+    "multiparty": "^4.2.3",
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "eslint": "^8",
