--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "14.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-modal": "^3.16.1",
     "sass": "^1.69.5",
     "uuid": "^9.0.1"
   },
